--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Django 첫 배포 성공!!</h1>
+    <a href="{%url 'user:login'%}">Django 첫 배포 성공!!</a>
 </body>
 </html>
