--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -10,8 +10,9 @@ Signup page
     <input  name="username" type="text">
     <p>비밀번호</p>
     <input name="password" type="password">
-    <p>성</p>
-    <input  name="firstname" type="text">
     <p>이름</p>
-    <input  name="lastname" type="text">
+    <input  name="name" type="text">
+    <p>학번</p>
+    <input name="user_id" type="text">
+    <input type="submit" value="SIGNUP">
 </form>
