--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -1,11 +1,15 @@
+
+{%load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{%block title%}test{%endblock%}</title>
+    <link rel="stylesheet" type="text/css"/>
 </head>
+
 <body>
-    <a href="{%url 'user:login'%}">Django 첫 배포 성공!!</a>
+    <a href="{%url 'user:login'%}">testing index page</a>
+    {%block content%}
+    {%endblock%}
 </body>
 </html>
