--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,7 +11,7 @@ login page
     <a href="{%url 'user:logout'%}">LOGOUT</a>
 {%else%}
 
-<form action="http://127.0.0.1:8000/auth/upload" method="POST">
+<form action="http://127.0.0.1:8000/upload" method="POST">
     {% csrf_token %}
     <input  name="username" type="text">
     <input  name="password" type="password">
