--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,7 +10,7 @@ login page
     <a href="{%url 'user:logout'%}">LOGOUT</a>
 {%else%}
 
-<form action="http://127.0.0.1:8000/upload" method="POST">
+<form action="http://ec2-54-180-123-195.ap-northeast-2.compute.amazonaws.com:8080/upload" method="POST">
     {% csrf_token %}
     <input  name="username" type="text">
     <input  name="password" type="password">
