--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -1,15 +1,12 @@
+{% load static %}
+{% load my_custom_tags %}
 
-{%load static%}
 <!DOCTYPE html>
-<html>
-<head>
-    <title>{%block title%}test{%endblock%}</title>
-    <link rel="stylesheet" type="text/css"/>
-</head>
-
-<body>
-    <a href="{%url 'user:login'%}">testing index page</a>
-    {%block content%}
-    {%endblock%}
-</body>
+<html lang="en" dir="ltr">
+    <head>
+        <title>Intro</title>
+    </head>
+    <body>
+        <p>{% my_tag %}</p>
+    </body>
 </html>
